Load settings from postgres!
